--- a/app/views/application/_form.html.erb
+++ b/app/views/application/_form.html.erb
@@ -1,8 +1,8 @@
 <%= form_for(twitter_user, :url => {:controller => :"application", :action => :get_followers}) do |f| %>
 
   <div class="field">
-    <%= f.label :UserName %>
-    <%= f.text_field :UserName %>
+    <%= f.label :name %>
+    <%= f.text_field :name %>
   </div>
 
   <div class="actions">
